--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                 <ul class="u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="home.html" style="padding: 22px 20px;">home</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="about.html" style="padding: 22px 20px;">about</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="get_rich.html" style="padding: 22px 20px;">Get Rich Fast</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="https://opensea.io/collection/hindtoken" target="_blank" style="padding: 22px 20px;">NFTs</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/104107734660910790562082404498941221053485349471680548845439361745925860419584/" target="_blank" style="padding: 22px 20px;">NFT</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="contact_us.html" style="padding: 22px 20px;">Contact Us</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="https://docs.google.com/forms/d/e/1FAIpQLScg2x2efAfjkfAl2QsIFzEBLqwtihrvwSvA337YM5KhMtIplg/viewform?usp=sf_link" target="_blank" style="padding: 22px 20px;">Customer Support</a>
 </li></ul>
@@ -59,7 +59,7 @@
                     <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="home.html" style="padding: 22px 20px;">home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="about.html" style="padding: 22px 20px;">about</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="get_rich.html" style="padding: 22px 20px;">Get Rich Fast</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://opensea.io/collection/hindtoken" target="_blank" style="padding: 22px 20px;">NFTs</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/104107734660910790562082404498941221053485349471680548845439361745925860419584/" target="_blank" style="padding: 22px 20px;">NFT</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="contact_us.html" style="padding: 22px 20px;">Contact Us</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLScg2x2efAfjkfAl2QsIFzEBLqwtihrvwSvA337YM5KhMtIplg/viewform?usp=sf_link" target="_blank" style="padding: 22px 20px;">Customer Support</a>
 </li></ul>
@@ -77,7 +77,7 @@
         </div>
       </div></header>
     <section class="u-clearfix u-custom-color-7 u-section-1" id="sec-4d5d">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
@@ -89,12 +89,11 @@
                   <h2 class="u-align-center u-text u-text-default u-text-1"> About Hind Token (HDT)</h2>
                   <h1 class="u-align-center u-text u-text-2">
                     <span style="font-size: 1.375rem;">Hind Token (HDT) is a leading digital asset on Binance Smart Chain in the form of pegged
-BEP20 tokens. Hind Token (HDT) building a fully decentralized Indian marketplace that allows traders
-to Buy/Exchange tokens or coins and trade them in an environment where
-liquidity pools and quick trades are available.&nbsp;&nbsp;</span>
+BEP20, Polygon PoS Chain (​Polygon) &amp; also listed on OPENSEA as&nbsp;Trading Cards NFTs.</span>
                   </h1>
                   <a href="https://bscscan.com/token/0x62beda1fe0a24c403e902cacce3a788b3e4ebfea" class="u-border-2 u-border-custom-color-2 u-border-hover-custom-color-2 u-btn u-btn-round u-button-style u-hover-custom-color-2 u-none u-radius-50 u-text-custom-color-2 u-text-hover-white u-btn-1" target="_blank"> SEE ON BSCSCAN</a>
-                  <p class="u-text u-text-3"> Contract address : 0x62beda1fe0a24c403e902cacce3a788b3e4ebfea</p>
+                  <a href="https://polygonscan.com/token/0x5ec2304228ff1a329c701ac4c7d9d611b37a0798" class="u-border-2 u-border-custom-color-2 u-border-hover-custom-color-2 u-btn u-btn-round u-button-style u-hover-custom-color-2 u-none u-radius-50 u-text-custom-color-2 u-text-hover-white u-btn-2" target="_blank"> SEE ON ​polygonscan</a>
+                  <a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/104107734660910790562082404498941221053485349471680548845439361745925860419584/" class="u-border-2 u-border-custom-color-2 u-border-hover-custom-color-2 u-btn u-btn-round u-button-style u-hover-custom-color-2 u-none u-radius-50 u-text-custom-color-2 u-text-hover-white u-btn-3" target="_blank"> SEE ON ​OPENSEA TRADING CARD</a>
                 </div>
               </div>
             </div>
